refactor: 상태를 객체로 관리하도록 변경